brat/test/golden/error/portpull.brat.golden
Error in test/golden/error/portpull.brat on line 6:
id2 = x,y => (id, id)(a1:x, y)
                     ^^^^^^^^^

  Port not found: a1 in (_0 :: Nat, _0 :: Nat)

